--- a/index.html
+++ b/index.html
@@ -10,29 +10,45 @@
 <body>
     <div class="text-box-container">
         <div class="text-box">
-            <h2 class="text-box-title">Tentang WEB ilhamngoding121</h2>
+            <h2 class="text-box-title">Tentang WEB ilhamngoding121!</h2>
             <div class="text-box-content" id="textContent">
-           <p>ini adalah WEB yang dirancang untuk percobaan saya,yang saya buat dengan teliti dan effort jadi kalo ada yg rusak seperti link,foto,dan lainnnya mohon maaf ya disini masih mode percobaan saja nanti kedepannya bagus kok.</p>
+           <p>Ini adalah WEB yang dirancang untuk percobaan saya,yang saya buat dengan teliti dan effort jadi kalo ada yg rusak seperti link,foto,dan lainnnya mohon maaf ya disini masih mode percobaan saja nanti kedepannya bagus kok.</p>
             </div>
         <div class="text-box-footen>  r">
                 <div class="tooltip">
                   <a href="https://ilhamngoding121.github.io/IlhamWEB1140/" class="copy-btn" target="_blank">Link ilhamngoding</a>
 
-        <div class="text-box-footen>  r">
-                <div class="tooltip">
-                  <a href="https//masih tahap perbaikan" class="copy-btn" target="_blank">Pembaruan</a>
+ <h2 class="text-box-title">Tentang Pembaruan WEB ini!</h2>
+            <div class="text-box-content" id="textContent">
+              <P>Fungsi pembaruan adalah untuk apa saja update diWEB ini,jadi ini hanya memberitahu apa saja pembaruan diWEB ini.</P>
 
         <div class="text-box-footen>  r">
                 <div class="tooltip">
-                  <a href="https://masih dalam pembagusan" class="copy-btn" target="_blank">Nonton Anime</a>
-            
+                  <a href="https//eror" class="copy-btn" target="_blank">Pembaruan</a>
+
+ <h2 class="text-box-title">NOBAR!</h2>
+            <div class="text-box-content" id="textContent">
+              <p>Kalian bosen WEBnya itu itu aja? nah di WEB ini sudah tersedia Nonton Anime Gratis loh,full episode dan lumayan lengkap!</p>
+               <p>Disini aman kok,hanya saja ini mengambil diYoutube.tapi ini hanya fitur tambahan dari WEB ini.</p>
         <div class="text-box-footen>  r">
                 <div class="tooltip">
-                  <a href="https://eror" class="copy-btn" target="_blank">!PERBAIKAN!</a>   
+                  <a href="https://eror" class="copy-btn" target="_blank">Nonton Anime</a>   
+
+ <h2 class="text-box-title">Bermain Game!</h2>
+            <div class="text-box-content" id="textContent">
+              <p>Disini ada fitur tambahan lagilohh fitur ini adalah game,Kamu bisa bermain game ini sepuasnya.Kalau ada bug atau apa bisa hubungi kami kok kami akan perbaiki secepat mungkin agar kalian bisa lebih sering bermain game diWEB ini.</p>
+
+        <div class="text-box-footen>  r">
+                <div class="tooltip">
+                  <a href="https://eror" class="copy-btn" target="_blank">Game</a>   
+
+ <h2 class="text-box-title">Support Kami!</h2>
+            <div class="text-box-content" id="textContent">
+              <p>JIka kamu ingin Support kami bisa disini,agar kami lebih semangat membuat WEB yang lebih bagus dan menarik.</p>
 
         <div class="text-box-footen> r">
               <div class="tooltip">
-                <a href="https://saweria.co/IlhamakromyGG" class="copy-btn" target="_blank">Link Donasi</a>
+                <a href="https://saweria.co/IlhamakromyGG" class="copy-btn" target="_blank">Support</a>
              </div>    
             </div>
            </div>
@@ -44,7 +60,10 @@
          </div>
           </div>
            </div>
-
+            </div>
+             </div>
+              </div>
+               </div>
         
             <p class="copyright"> &copy; 2025 Website ilhamngoding121. Semua hak cipta dilindungi.
             </p>
