--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
         <div class="text-box-footen>  r">
                 <div class="tooltip">
-                  <a href="https://eror" class="copy-btn" target="_blank">Game</a>   
+                  <a href="https://www.crazygames.co.id/" class="copy-btn" target="_blank">Game</a>   
 
  <h2 class="text-box-title">Support Kami!</h2>
             <div class="text-box-content" id="textContent">
