--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
 
  <h2 class="text-box-title">NOBAR!</h2>
             <div class="text-box-content" id="textContent">
-              <p>Kalian bosen WEBnya itu itu aja? nah di WEB ini sudah tersedia Nonton Anime Gratis loh,full episode dan lumayan lengkap!</p>
+              <p>Kalian bosen WEBnya itu itu aja? nah di WEB ini sudah tersedia Nonton Gratis loh,full dan lenkap!</p>
                <p>Disini aman kok,hanya saja ini mengambil diYoutube.tapi ini hanya fitur tambahan dari WEB ini.</p>
         <div class="text-box-footen>  r">
                 <div class="tooltip">
-                  <a href="https://eror" class="copy-btn" target="_blank">Nonton Anime</a>   
+                  <a href="https://eror" class="copy-btn" target="_blank">Nobar</a>   
 
  <h2 class="text-box-title">Bermain Game!</h2>
             <div class="text-box-content" id="textContent">
